# src/dtos/friends.go
@@ -8,3 +8,7 @@ type FriendOutput struct {
 	ID   int    `json:"id"`
 	Name string `json:"name"`
 }
+
+type AcceptedFriend struct {
+	ID int `json:"id"`
+}
